--- a/www/style.css
+++ b/www/style.css
@@ -10,7 +10,7 @@ body {
   display: grid;
   justify-items: center;
   align-content: center;
-  grid-template-columns: 1fr 2fr 1fr 1fr;
+  grid-template-columns: 1fr 2fr 1fr;
   width: 100%;
   height: 3em;
   opacity: 0;
